p-grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
       containers:
         - name: grafana
           image: grafana/grafana:latest
           ports:
             - name: grafana
               containerPort: 3000
           resources:
             limits:
               memory: "2Gi"
               cpu: "1000m"
             requests:
               memory: "1Gi"
               cpu: "500m"
           volumeMounts:
             - name: grafana-datasources
               mountPath: /etc/grafana/provisioning/datasources
               readOnly: false
             - name: grafana-storage
               mountPath: /var/lib/grafana

       volumes:
       - name: grafana-datasources
         configMap:
           defaultMode: 420
           name: grafana-datasources
       - name: grafana-storage
         emptyDir: {}
